August_30/August_30/src/objects/SF_Partnership_Points__c.object
<CustomObject>
    <fields>
        <fullName>Architect_Certifications_Pts__c</fullName>
        <label>Architect Certifications Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Pts__c</fullName>
        <label>CSAT Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_Sell_ACV_Pts__c</fullName>
        <label>Co-Sell ACV Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_Certifications_Pts__c</fullName>
        <label>Consultant Certifications Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Stories_Pts__c</fullName>
        <label>Customer Stories Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expanded_Knowledge_Pts__c</fullName>
        <label>Expanded Knowledge Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Growth_in_Certified_Consultants_Pts__c</fullName>
        <label>Growth in Certified Consultants Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SF_Evaluation_Date__c</fullName>
        <label>SF Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sourced_ACV_Growth_Pts__c</fullName>
        <label>Sourced ACV Growth Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sourced_ACV_Pts__c</fullName>
        <label>Sourced ACV Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialization_Pts__c</fullName>
        <label>Specialization Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_As_of__c</fullName>
        <label>Target As of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <formula>Sourced_ACV_Pts__c  +  Sourced_ACV_Growth_Pts__c   +  Co_Sell_ACV_Pts__c  +  Expanded_Knowledge_Pts__c  +  Consultant_Certifications_Pts__c  +  Specialization_Pts__c  +  Growth_in_Certified_Consultants_Pts__c  +  CSAT_Pts__c  +  Trailhead_Pts__c   +  Customer_Stories_Pts__c + Architect_Certifications_Pts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trailhead_Pts__c</fullName>
        <label>Trailhead Pts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SF Partnership Points</label>
    <nameField>
        <displayFormat>SFE-{00}</displayFormat>
        <label>SF Evaluation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SF Partnerships Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SF_Evaluation_Date__c</columns>
        <columns>Target_As_of__c</columns>
        <columns>Total_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Qtr_Actual</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SF_Evaluation_Date__c</columns>
        <columns>Total_Points__c</columns>
        <columns>Trailhead_Pts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SF_Partnership_Points__c.Qtr_Actual</value>
        </filters>
        <label>Qtr Actual</label>
    </listViews>
    <listViews>
        <fullName>Qtr_Goal</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SF_Evaluation_Date__c</columns>
        <columns>Total_Points__c</columns>
        <columns>Trailhead_Pts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SF_Partnership_Points__c.Goal</value>
        </filters>
        <label>Goal</label>
    </listViews>
    <listViews>
        <fullName>Qtr_Possible</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>SF_Evaluation_Date__c</columns>
        <columns>Total_Points__c</columns>
        <columns>Trailhead_Pts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SF_Partnership_Points__c.Possible</value>
        </filters>
        <label>Possible</label>
    </listViews>
    <recordTypes>
        <fullName>Goal</fullName>
        <active>true</active>
        <label>Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Possible</fullName>
        <active>true</active>
        <label>Possible</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qtr_Actual</fullName>
        <active>true</active>
        <label>Qtr Actual</label>
    </recordTypes>
</CustomObject>